Fixed most tracks table layout issues

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -24,6 +24,6 @@ body.is-playing .sidebar{height:calc(100% - 6rem)}
 
 .ellipsis{white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 
-.track-play{transform:translateX(-35%)}
+.track-index{width:30px;text-align:center}
 .track-play,.track-container:hover .track-index{display:none}
 .track-index,.track-container:hover .track-play{display:block}
